@@ -1,3 +1,7 @@
+2018-05-20 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* bootstrap.c: Define DONT_USE_FLOAT_H before including mini-gmp.
+
 2018-05-14 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* mpn/generic/dcpi1_bdiv_q.c (mpn_dcpi1_bdiv_q_n): Decl. static.
